--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,11 +12,11 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<p>Light of the Locked World is a fantasy RPG inspired by RuneScape.</p>
+<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by oldschool MMO's like Ultima Online and RuneScape.</p>
 	
-<p>The World Gate has malfunctioned and you are taken to the Locked World.
-As you learn to live in it, you notice that something sinister is going on.
-This strange world is in danger - you must find out what's happening before it's too late to save yourself.</p>
+<p>The World Gate has malfunctioned and you are taken to Caios II - the Locked World.
+As you build a new life for yourself, you notice that something sinister is going on.
+You might be in danger - you must find out what's happening.</p>
 
 <p><b>Features:</b></p>
 
@@ -24,7 +24,7 @@ This strange world is in danger - you must find out what's happening before it's
 
 <p><b>Combat:</b></p>
 
-<p>Real-time, only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
+<p>Real-time, uses only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
 
 <p><b>Local co-op and PVP:</b></p>
 	
@@ -38,7 +38,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 </comments>
 	
 <img src=
-     "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW-images/Moonrise%20Desert%202019-04-18.png"
+     "https://i.imgur.com/WBjMnxn.png"
       alt="Moonrise Desert" class="center"> 
 	
 <comments>
@@ -50,6 +50,16 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <li><b>Website:</b> https://zuurix.com/</li>
 <li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
 <li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
+</ul>
+	
+<comments>
+<a>Publisher</a>
+</comments>
+	
+<ul style="list-style-type:none">
+<li>Michael Jendryssek</li>
+<li><b>Website:</b> https://freekshow.de/</li>
+<li><b>Twitter:</b> https://twitter.com/TheFreekshow</li>
 </ul>
 	
 <comments>
