--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -26,7 +26,7 @@ You might be in danger - you must find out what's happening.</p>
 
 <p>Real-time, uses only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
 
-<p><b>Local co-op and PVP:</b></p>
+<p><b>Local multiplayer:</b></p>
 
 <p>Take the game to the next level by inviting another player to play with or against you.
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
