--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: Zuurix.com - About
 <p>Hello!</p>
 <p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer.</p>
 
-<p>I was introduced to video games when I was like 10 years old and since then I am extremely passionate about them.</p>
+<p>I was introduced to video games when I was 10 years old and since then I am extremely passionate about them.</p>
 <p>I played them, I made sketches of them, I learned about them, and ended up developing them =]</p>
 
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
@@ -19,7 +19,7 @@ title: Zuurix.com - About
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
 
-<p>Right now I am working on Light of the Locked World - an RPG inspired by RuneScape.</p>
+<p>Right now I am working on Light of the Locked World - an RPG inspired by oldschool MMO's like Ultima Online and RuneScape.</p>
 
 <comments>
 <a>Contact me</a>
