--- a/community/index.html
+++ b/community/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Community
 
 <p>Light of the Locked World status:</p>
 
-<p>Currently doing the area loading system rework, pre-alpha demo is postponed to June.</p>
+<p>Steam page is going live soon!</p>
 
 <comments>
 <a>Join my Discord server</a>
