--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Home
 <p>Welcome to the home for awesome indie games created by Zuurix!</p>
 	
 <comments>
-<a>Blog</a>
+<a>News</a>
 </comments>
 	
 {% for post in site.posts offset:0 limit:20 %}
