--- a/games/index.html
+++ b/games/index.html
@@ -26,7 +26,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Light of the Locked World is a fantasy RPG with co-op and PvP, focused on combat and exploration.</p>	
+	<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by oldschool MMO's like Ultima Online and RuneScape.</p>	
 	
 	<ul style="margin-bottom: 202px; list-style-type: none;">
 	<li><a href="http://zuurix.com/light-of-the-locked-world/">▶ View press kit</a></li>
