--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMO's like Ultima Online and RuneScape.</p>
+<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
 	
 <p>The World Gate has malfunctioned and you are taken to Caios II - the Locked World.
 As you build a new life for yourself, you notice that something sinister is going on.
