--- a/community/index.html
+++ b/community/index.html
@@ -12,7 +12,9 @@ title: Zuurix.com - Community
 
 <p>Light of the Locked World status:</p>
 
-<p>Steam page is going live soon!</p>
+<p>Steam page is live!</p>
+
+<p><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/">▶ Click here to visit Steam page</a></p>
 
 <comments>
 <a>Join my Discord server</a>
