--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -1,18 +1,24 @@
 ---
 layout: default
-title: Zuurix.com - Light of the Locked World press kit
+title: Zuurix.com - Light of the Locked World
 ---
 <div class="blurb">
 	
-<h1>Light of the Locked World press kit</h1>
+<h1>Light of the Locked World</h1>
 	
-<p>Contacts, information, and resources</p>
+<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
+
+<comments>
+<a>Trailer</a>
+</comments>	
+
+<iframe width="560" height="315" class="center" src="https://www.youtube.com/embed/lES8lJEUxwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
-<a>Full game description</a>
+<a>About the game</a>
 </comments>
 
-<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
+<p></p>
 	
 <p>The World Gate has malfunctioned and you are taken to Caios II - the Locked World.
 As you build a new life for yourself, you notice that something sinister is going on.
@@ -38,56 +44,5 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <img src=
      "https://i.imgur.com/WBjMnxn.png"
       alt="Moonrise Desert" class="center"> 
-	
-<comments>
-<a>Developer</a>
-</comments>
-	
-<ul style="list-style-type:none">
-<li>Aivaras Klimas</li>
-<li><b>Website:</b> https://zuurix.com/</li>
-<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
-<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
-</ul>
-	
-<comments>
-<a>Publisher</a>
-</comments>
-	
-<ul style="list-style-type:none">
-<li>Michael Jendryssek</li>
-<li><b>Website:</b> https://freekshow.de/</li>
-<li><b>Twitter:</b> https://twitter.com/TheFreekshow</li>
-</ul>
-	
-<comments>
-<a>Availability</a>
-</comments>
-	
-<ul style="list-style-type:none">
-
-<li>Currently unavailable</li>
-</ul>
-	
-<comments>
-<a>Development stage</a>
-</comments>
-	
-<ul style="list-style-type:none">
-
-<li>Pre-Alpha</li>
-
-</ul>
-	
-<comments>
-<a>Press contact</a>
-</comments>
-	
-<ul style="list-style-type:none">
-
-<li>Aivaras Klimas</li>
-<li><b>Email:</b> zuurix@protonmail.com</li>
-
-</ul>
 	
 </div><!-- /.blurb -->
