--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -6,19 +6,13 @@ title: Zuurix.com - Light of the Locked World
 	
 <h1>Light of the Locked World</h1>
 	
-<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
-
-<comments>
-<a>Trailer</a>
-</comments>	
-
-<iframe width="560" height="315" class="center" src="https://www.youtube.com/embed/lES8lJEUxwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/lES8lJEUxwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
 </comments>
 
-<p></p>
+<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
 	
 <p>The World Gate has malfunctioned and you are taken to Caios II - the Locked World.
 As you build a new life for yourself, you notice that something sinister is going on.
