--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -1,1 +1,93 @@
+---
+layout: default
+title: Zuurix.com - Light of the Locked World press kit
+---
+<div class="blurb">
+	
+<h1>Light of the Locked World press kit</h1>
+	
+<p>Contacts, information, and resources</p>
+	
+<comments>
+<a>Full game description</a>
+</comments>
 
+<p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
+	
+<p>The World Gate has malfunctioned and you are taken to Caios II - the Locked World.
+As you build a new life for yourself, you notice that something sinister is going on.
+You might be in danger - you must find out what's happening.</p>
+
+<p><b>Features:</b></p>
+
+<p>Light of the Locked World has all of the beloved RPG features - quests, exploration, crafting, and deep character customization - executed in uncommon ways.</p>
+
+<p><b>Combat:</b></p>
+
+<p>Real-time, uses only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
+
+<p><b>Local multiplayer:</b></p>
+
+<p>Take the game to the next level by inviting another player to play with or against you.
+You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
+
+<comments>
+<a>Screenshots</a>
+</comments>
+	
+<img src=
+     "https://i.imgur.com/WBjMnxn.png"
+      alt="Moonrise Desert" class="center"> 
+	
+<comments>
+<a>Developer</a>
+</comments>
+	
+<ul style="list-style-type:none">
+<li>Aivaras Klimas</li>
+<li><b>Website:</b> https://zuurix.com/</li>
+<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
+<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
+</ul>
+	
+<comments>
+<a>Publisher</a>
+</comments>
+	
+<ul style="list-style-type:none">
+<li>Michael Jendryssek</li>
+<li><b>Website:</b> https://freekshow.de/</li>
+<li><b>Twitter:</b> https://twitter.com/TheFreekshow</li>
+</ul>
+	
+<comments>
+<a>Availability</a>
+</comments>
+	
+<ul style="list-style-type:none">
+
+<li>Currently unavailable</li>
+</ul>
+	
+<comments>
+<a>Development stage</a>
+</comments>
+	
+<ul style="list-style-type:none">
+
+<li>Pre-Alpha</li>
+
+</ul>
+	
+<comments>
+<a>Press contact</a>
+</comments>
+	
+<ul style="list-style-type:none">
+
+<li>Aivaras Klimas</li>
+<li><b>Email:</b> zuurix@protonmail.com</li>
+
+</ul>
+	
+</div><!-- /.blurb -->
