--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -32,6 +32,12 @@ You might be in danger - you must find out what's happening.</p>
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
 
 <comments>
+<a>Get</a>
+</comments>
+	
+
+	
+<comments>
 <a>Screenshots</a>
 </comments>
 	
