--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -32,7 +32,7 @@ You might be in danger - you must find out what's happening.</p>
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
 
 <comments>
-<a>Get</a>
+<a>Get Light of the Locked World</a>
 </comments>
 	
 <c href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Get from Steam</c>
