--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -35,7 +35,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Get Light of the Locked World</a>
 </comments>
 	
-<c href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Get from Steam</c>
+<c><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Get from Steam</a></c>
 	
 <comments>
 <a>Screenshots</a>
