--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -32,10 +32,10 @@ You might be in danger - you must find out what's happening.</p>
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
 
 <comments>
-<a>Get</a>
+<a>Links</a>
 </comments>
 	
-<c><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Get from Steam</a></c>
+<h3><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Get from Steam</a></h3>
 	
 <comments>
 <a>Screenshots</a>
