--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -35,7 +35,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Links</a>
 </comments>
 	
-<h3><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Get from Steam</a></h3>
+<h3><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Visit Steam page ◀</a></h3>
 	
 <comments>
 <a>Screenshots</a>
