--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -32,7 +32,7 @@ You might be in danger - you must find out what's happening.</p>
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
 
 <comments>
-<a>Links</a>
+<a>Links+</a>
 </comments>
 	
 <h3><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ Visit Steam page ◀</a></h3>
