--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -35,7 +35,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Links</a>
 </comments>
 	
-<p><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/">▶ Click here to visit Steam page</a></p>
+<p><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/">▶ Steam</a></p>
 
 <comments>
 <a>Screenshots</a>
