--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -40,9 +40,11 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <comments>
 <a>Screenshots</a>
 </comments>
-	
+
+<a href="https://www.facebook.com/GamesByZuurix/"
 <img src=
      "https://i.imgur.com/WBjMnxn.png"
       alt="Moonrise Desert" class="center"> 
-	
+</a>
+
 </div><!-- /.blurb -->
