--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -41,10 +41,8 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Screenshots</a>
 </comments>
 
-<a href="https://www.facebook.com/GamesByZuurix/"
-<img src=
-     "https://i.imgur.com/WBjMnxn.png"
-      alt="Moonrise Desert" class="center"> 
+<a href="https://www.facebook.com/GamesByZuurix/">
+<img src="https://i.imgur.com/WBjMnxn.png" alt="Moonrise Desert" class="center"> 
 </a>
 
 </div><!-- /.blurb -->
