--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -41,7 +41,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Screenshots</a>
 </comments>
 
-<a href="https://www.facebook.com/GamesByZuurix/">
+<a href="https://i.imgur.com/WBjMnxn.png" target="_blank">
 <img src="https://i.imgur.com/WBjMnxn.png" alt="Moonrise Desert" class="center"> 
 </a>
 
