--- a/games/index.html
+++ b/games/index.html
@@ -8,19 +8,6 @@ title: Zuurix.com - Games
 	<p>Play games by Zuurix!</p>
 	
 	<comments>
-	<a>Sector Six</a>
-	</comments>	
-	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-    	
-	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
-	
-	<ul style="margin-bottom: 180px; list-style-type: none;">
-	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
-	<li><a href="http://zuurix.com/sector-six/">▶ View press kit</a></li>
-	</ul>
-	
-	<comments>
 	<a>Light of the Locked World</a>
 	</comments>
 	
@@ -28,11 +15,26 @@ title: Zuurix.com - Games
 	
 	<p>Light of the Locked World is a fantasy RPG inspired by old school MMO's like Ultima Online and RuneScape.</p>	
 	
-	<ul style="margin-bottom: 202px; list-style-type: none;">
+	<ul style="margin-bottom: 224px; list-style-type: none;">
+	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ View on Steam</a></li>
 	<li><a href="http://zuurix.com/light-of-the-locked-world/">▶ About the game</a></li>
 	<li><a href="http://zuurix.com/light-of-the-locked-world-presskit/">▶ View press kit</a></li>
 	</ul>
-		
+	
+	<comments>
+	<a>Sector Six</a>
+	</comments>	
+	
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
+	
+	<ul style="margin-bottom: 224px; list-style-type: none;">
+	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
+	<li><a href="http://zuurix.com/sector-six/">▶ About the game</a></li>
+	<li><a href="http://zuurix.com/sector-six-presskit/">▶ View press kit</a></li>
+	</ul>
+	
 	<comments>
 	<a>Other games</a>
 	</comments>
