--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -4,12 +4,10 @@ title: Zuurix.com - Sector Six press kit
 ---
 <div class="blurb">
 	
-<h1>Sector Six press kit</h1>
-	
-<p>Contacts, information, and resources</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
-<a>Full game description</a>
+<a>About the game</a>
 </comments>
 	
 	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
@@ -34,77 +32,6 @@ title: Zuurix.com - Sector Six press kit
 
 	<p>Make the game as hard as you want it to be! Modular difficulty system allows you to modify almost every element of the combat and offers rewards for increasing the difficulty.</p>
 		
-	<comments>
-	<a>Trailer</a>
-	</comments>
-	
-	<space>
-	<a> </a>
-	</space>
-	
-	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=3f1KipPu1fg" frameborder="0" allowfullscreen></iframe>
-  
-	<space>
-	<a> </a>
-	</space>
-	
-  	<comments>
-	<a>Developer</a>
-	</comments>
-	
-	<ul style="list-style-type:none">
-	<li>Aivaras Klimas</li>
-	<li><b>Website:</b> https://zuurix.com/</li>
-	<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
-	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
-	</ul>
-	
-	<comments>
-	<a>Publisher</a>
-	</comments>
-	
-	<ul style="list-style-type:none">
-
-	<li>Michael Jendryssek</li>
-	<li><b>Website:</b> http://www.freekshow.de/</li>
-
-	</ul>
-	
-	<comments>
-	<a>Availability</a>
-	</comments>
-	
-	<ul style="list-style-type:none">
-
-	<li><b>Platforms:</b> Windows, Linux</li>
-	<li><b>Stores:</b> Steam</li>
-	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020/</li>
-	<li><b>Price:</b> $9.99</li>
-
-	</ul>
-	
-	<comments>
-	<a>Development status</a>
-	</comments>
-	
-	<ul style="list-style-type:none">
-
-	<li>Completed</li>
-	<li><b>Release date:</b> 2018-09-07</li>
-
-	</ul>
-	
-	<comments>
-	<a>Press contact</a>
-	</comments>
-	
-	<ul style="list-style-type:none">
-
-	<li>Aivaras Klimas</li>
-	<li><b>Email:</b> zuurix@protonmail.com</li>
-
-	</ul>
-	
 	<comments>
 	<a>Screenshots</a>
 	</comments>
@@ -144,43 +71,5 @@ title: Zuurix.com - Sector Six press kit
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
-	
-	<space>
-	<a> </a>
-	</space>
-	
-	<comments>
-	<a>Images</a>
-	</comments>
-
-	<a href="https://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
-	
-	<a href="https://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/x0nxfnx"><img src="http://i.imgur.com/x0nxfnx.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/prIisV9"><img src="http://i.imgur.com/prIisV9.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/I4Fdhww"><img src="http://i.imgur.com/I4Fdhww.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/Zu7oafJ"><img src="http://i.imgur.com/Zu7oafJ.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/kp5dS0l"><img src="http://i.imgur.com/kp5dS0l.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/v5g25bh"><img src="http://i.imgur.com/v5g25bh.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" title="source: imgur.com" /></a>
-	
-	<a href="https://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
-
-        <a href="https://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
-	
-	<space>
-	<a> </a>
-	</space>
 	
 </div><!-- /.blurb -->
