--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Zuurix.com - Sector Six press kit
+title: Zuurix.com - Sector Six
 ---
 <div class="blurb">
 	
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
@@ -41,35 +41,43 @@ title: Zuurix.com - Sector Six press kit
 	</space>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png" title="Combat: Fighting hyper" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png" title="Inventory and relic" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png" title="Combat: Fighting bombardment station" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png" title="Modular difficulty system: Increasing enemy armor" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png" title="Story mission" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png" title="Combat: Fighting acolyte swarm" style="height: 320px; width: 480px;"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png">
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png"
+	   class="center">
 		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
 	
 </div><!-- /.blurb -->
