--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -35,49 +35,45 @@ title: Zuurix.com - Sector Six
 	<comments>
 	<a>Screenshots</a>
 	</comments>
-	
-	<space>
-	<a> </a>
-	</space>
-	
+
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png" title="Combat: Fighting hyper" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png" title="Combat: Fighting hyper"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png" title="Inventory and relic" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png" title="Inventory and relic"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png" title="Combat: Fighting bombardment station" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png" title="Combat: Fighting bombardment station"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png" title="Modular difficulty system: Increasing enemy armor" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png" title="Modular difficulty system: Increasing enemy armor"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png" title="Story mission" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png" title="Story mission"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png" title="Combat: Fighting acolyte swarm" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png" title="Combat: Fighting acolyte swarm"/></a>
 	
 	<a href=
 	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png"
 	   class="center">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry"/></a>
 	
 </div><!-- /.blurb -->
