--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -31,7 +31,13 @@ title: Zuurix.com - Sector Six
 	<p><b>Modular difficulty system</b></p>
 
 	<p>Make the game as hard as you want it to be! Modular difficulty system allows you to modify almost every element of the combat and offers rewards for increasing the difficulty.</p>
-		
+	
+	<comments>
+	<a>Links</a>
+	</comments>
+	
+	<p><a href="https://store.steampowered.com/app/465020/Sector_Six/">▶ Steam</a></p>
+	
 	<comments>
 	<a>Screenshots</a>
 	</comments>
