--- a/sector-six-presskit/index.html
+++ b/sector-six-presskit/index.html
@@ -38,15 +38,7 @@ title: Zuurix.com - Sector Six press kit
 	<a>Trailer</a>
 	</comments>
 	
-	<space>
-	<a> </a>
-	</space>
-	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
-	<space>
-	<a> </a>
-	</space>
+	<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/3f1KipPu1fg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
   	<comments>
 	<a>Developer</a>
@@ -109,78 +101,74 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
-	<space>
-	<a> </a>
-	</space>
+	<a href=
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/1.%20Combat.png" title="Combat: Using Era's End ability" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png" title="Combat: Fighting hyper"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/4.%20Combat.png" title="Combat: Fighting hyper" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png" title="Inventory and relic"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/3.%20Relic.png" title="Inventory and relic" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png" title="Combat: Fighting bombardment station"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/2.%20Combat.png" title="Combat: Fighting bombardment station" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png" title="Modular difficulty system: Increasing enemy armor"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/11.%20Modular%20difficulty%20sytem.png" title="Modular difficulty system: Increasing enemy armor" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png" title="Story mission"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/5.%20Story.png" title="Story mission" style="height: 320px; width: 480px;"/></a>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png" title="Combat: Fighting acolyte swarm"/></a>
 	
 	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/8.%20Combat.png" title="Combat: Fighting acolyte swarm" style="height: 320px; width: 480px;"/></a>
-	
-	<a href=
-	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png">
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry" style="height: 320px; width: 480px;"/></a>
-	
-	<space>
-	<a> </a>
-	</space>
+	   "https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png"
+	   class="center">
+		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/1.0.0%20update/7.%20Combat.png" title="Combat: Fighting sentry"/></a>
 	
 	<comments>
 	<a>Images</a>
 	</comments>
 
-	<a href="https://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
+	<a href="https://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" class="center" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
 	
-	<a href="https://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/x0nxfnx"><img src="http://i.imgur.com/x0nxfnx.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/x0nxfnx"><img src="http://i.imgur.com/x0nxfnx.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/prIisV9"><img src="http://i.imgur.com/prIisV9.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/prIisV9"><img src="http://i.imgur.com/prIisV9.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/I4Fdhww"><img src="http://i.imgur.com/I4Fdhww.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/I4Fdhww"><img src="http://i.imgur.com/I4Fdhww.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/Zu7oafJ"><img src="http://i.imgur.com/Zu7oafJ.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/Zu7oafJ"><img src="http://i.imgur.com/Zu7oafJ.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/kp5dS0l"><img src="http://i.imgur.com/kp5dS0l.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/kp5dS0l"><img src="http://i.imgur.com/kp5dS0l.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/v5g25bh"><img src="http://i.imgur.com/v5g25bh.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/v5g25bh"><img src="http://i.imgur.com/v5g25bh.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" class="center" title="source: imgur.com" /></a>
 	
-	<a href="https://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
+	<a href="https://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" class="center" title="source: imgur.com" /></a>
 
-        <a href="https://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
-	
-	<space>
-	<a> </a>
-	</space>
+        <a href="https://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" class="center" title="source: imgur.com" /></a>
 	
 </div><!-- /.blurb -->
