--- a/sector-six-presskit/index.html
+++ b/sector-six-presskit/index.html
@@ -70,7 +70,7 @@ title: Zuurix.com - Sector Six press kit
 
 	<li><b>Platforms:</b> Windows, Linux</li>
 	<li><b>Stores:</b> Steam</li>
-	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020/</li>
+	<li><b>Steam Store link:</b> https://store.steampowered.com/app/465020/Sector_Six/</li>
 	<li><b>Price:</b> $9.99</li>
 
 	</ul>
